syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.iconsult.zeenebel.emailservice";


service EmailOTPService {
  rpc GenerateOTP(GenerateOTPRequest) returns (GenerateOTPResponse);
}

message GenerateOTPRequest {
  string email = 1;
}

message GenerateOTPResponse {
  string otp = 1;
}
